# Centralis

./: .gitignore  .gitmodules  AuthToken.py  CMakeLists.txt  CentralisWidgetExtension.entitlements  LICENSE  README.md
.github/workflows/: buildandanalyze.yml
Centralis/: AppDelegate.swift  Centralis-iOS.entitlements  Centralis-macOS.entitlements  Centralis.entitlements  Constants.swift  Info.plist  SceneDelegate.swift  main.swift
Centralis Rewritten/Web Server/: CentralisNotificationCertificate.p12  CentralisNotificationKey.pem  main.py  requirements.txt
Centralis.xcodeproj/: project.pbxproj
Centralis/Centralis/: Centralis-Bridging-Header.h
Centralis/CentralisAppClip/: CentralisAppClip.entitlements  Info.plist
Centralis/Delegates/: AppDelegate.swift  SceneDelegate.swift
Centralis/Extensions/: CAGradientLayer+Extensions.swift  Double+Extensions.swift  NSDate+Extension.swift  NSMutableAttributedString+Extension.swift  NSNotification+Extensions.swift  UIButton+Extension.swift  UIColor+Extensions.swift  UITextView+Extension.swift  UIView+Extensions.swift  UserDefaults+Extension.swift  UserDefaults+Extensions.swift  UserDefaults+Optional.swift
Centralis/Resources/: Info.plist
Centralis/View Controllers/: AchievementViewController.swift  CateringViewController.swift  HomeViewController.swift  LoginViewController.swift
CentralisWidget/: CentralisWidget.swift  Info.plist  LongTimetableWidget.swift  NextLessonWidget.swift
DemoAPI/: main.py
MyMathsTesting/MyMathsTesting.xcodeproj/: project.pbxproj
Python Tools/: AuthToken.py
libAmy/: BridgingStubs.swift
(+325 files in other folders)
